<resources>
    <string name="app_name">007 Cab</string>
    <string name="myrides">My Rides</string>


    <string name="login_details">Please enter your mobile number and email to login or create account</string>
    <string name="username">Passanger Name</string>
    <string name="usermobileno">Mobile No</string>
    <string name="useremail">Email (Optional)</string>
    <string name="getotp">Get OTP</string>
    <string name="save">Save</string>
    <string name="terms">By continuing. I agree to 007 Cab</string>
    <string name="termscondition">Terms and Conditions</string>
    <string name="countrycode">+ 91</string>
    <string name="otp">Enter One Time Password (OTP)</string>
    <string name="otp_details">One Time Password (OTP) has been sent to your phone number, please enter the same here to login.</string>
    <string name="continu">Continue</string>
    <string name="resendcode">Resend Code</string>


    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_title_bookacab</item>
        <item>@string/nav_title_myrides</item>
        <item>@string/nav_title_refer</item>
        <item>@string/nav_title_wallet</item>
        <item>@string/nav_title_profile</item>
        <item>@string/nav_title_help</item>
        <item>@string/nav_title_logout</item>
    </string-array>

    <string name="nav_title_bookacab">Book A Cab</string>
    <string name="nav_title_hourly">Hourly Cab</string>
    <string name="nav_title_outstation">Outstation (Return)</string>
    <string name="nav_title_myrides">My Rides</string>
    <string name="nav_title_refer">Refer &amp; Earn</string>
    <string name="nav_title_wallet">Wallet</string>
    <string name="nav_title_profile">Profile</string>
    <string name="nav_title_logout">Logout</string>
    <string name="nav_title_emergency_contacts">Emergency Contacts</string>
    <string name="nav_title_help">Support</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onesideFrom">One Side From</string>
    <string name="selectcity">Select City</string>
    <string name="selectdestination">Select A Destination</string>
    <string name="bookNow">Book Now</string>
    <string name="ridefaretitle">All Inclusive Fixed Fare</string>
    <string name="passname">Passanger Name</string>
    <string name="drivername">Driver Name</string>
    <string name="passmobile">Mobile No.</string>
    <string name="pickdate">Pickup Date</string>
    <string name="picktime">Pickup Time</string>
    <string name="pickup">Pickup From</string>
    <string name="dropat">Drop Off At</string>
    <string name="gst">Use GST for Business Travel(Optional)</string>
    <string name="discount">Discount Coupon</string>
    <string name="apply">Apply</string>
    <string name="note">Note</string>
    <string name="notedetails">- Driver Allowance: Rs 0 \n - Extra KMs Fare: Rs 0 \n - 007 cab Toll-Tax : Included \n - Inter-State Border Tax :Included \n - Parking Charges :As applicable Extra </string>
    <string name="choosepayment">Choose Payment Options</string>
    <string name="ongoingtrips">Ongoing Trips</string>
    <string name="pasttrips">Past Trips</string>


    <string name="card">Credit / Debit Card</string>
    <string name="netbanking">Net Banking</string>
    <string name="payment">Payment Gateway</string>
    <string name="paytm">Paytm Wallet</string>
    <string name="paypal">Pay Pal</string>
    <string name="paydriver">Pay Cash To Driver</string>
    <string name="selectpayment">Select Payment</string>
    <string name="totalAmount">Total Amount</string>
    <string name="Amount">Rs. 1,364</string>
    <string name="AmountPayble">Amount Payable : Rs. 1,364</string>
    <string name="paymentmethod">Select Payment Mode</string>
    <string name="tolltax">Rs 1,1199 + Toll Tax : Rs. 100 + GST (5.0 %)\n : Rs.65</string>

    <string name="Travelcity">Travel City</string>
    <string name="noofdays">Number Of Days</string>
    <string name="getfare">Get Fare</string>
    <string name="refer">Refer</string>
    <string name="referstring">Gift your friends Rs. 100 when they Sign Up and you also get Rs 200 when they take their first ride with us. forany concern \n feedback@onesidedcab.com</string>


    <string name="internet_not_avail">Internet is not available. Please try later.</string>

    <string name="failureConnect">Failed to connect</string>
    <string name="errorCheckNet">Check your internet connectivity</string>
    <string name="errorSomething">Something went wrong, Please try again.</string>
    <string name="failureSignUp">Connection Timeout Please Try again.</string>
    <string name="failureSignIn">Connection Timeout Please Try again.</string>
    <string name="lbl_uname_not_null">Username must enter.</string>
    <string name="lbl_pwd_not_null">Mobile number must enter.</string>
    <string name="txtEstTime">Estimated time</string>
    <string name="txtEstDuration">Estimated duration</string>
    <string name="next">Next</string>
    <string name="ridelater">Ride later</string>
    <string name="getride">Get Ride </string>

    <string name="oneway">One way </string>
    <string name="hourly">Hourly</string>




</resources>
