<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearCity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/onesideFrom"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:padding="2dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Ahemdabad"
            android:textSize="15sp"
            android:drawableRight="@drawable/ic_expand_more_black_24dp"
            android:drawablePadding="10dp"
            android:padding="2dp" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/semiSmall"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small"
        android:layout_marginBottom="@dimen/small">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/small"
            android:elevation="@dimen/small">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Travelcity"
                    android:layout_margin="@dimen/small"
                    android:id="@+id/edtPickupcity"
                    />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Travelcity"
                    android:layout_margin="@dimen/small"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/small">


                    <EditText
                        android:id="@+id/edtPickDate"
                        android:drawablePadding="@dimen/small"
                        android:drawableLeft="@drawable/ic_date_range_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/pickdate"
                        />

                    <EditText
                        android:id="@+id/edtPickTime"
                        android:drawablePadding="@dimen/small"
                        android:drawableLeft="@drawable/ic_access_time_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/picktime"
                        />


                </LinearLayout>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/noofdays"
                    android:layout_margin="@dimen/small"
                    />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/extraLarge"
                    android:text="@string/getfare"
                    android:padding="@dimen/medium"
                    android:textSize="@dimen/textsize_22sp"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"/>


            </LinearLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>


</LinearLayout>