<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RideDetailsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgBak"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/medium"
                    android:src="@drawable/ic_keyboard_backspace_black_24dp"
                    android:tint="@color/black" />


                <ImageView
                    android:id="@+id/carImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/small"
                    android:src="@mipmap/ic_launcher" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txtTotalFare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:text="Rs. 1500"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_26sp" />


            <TextView
                android:id="@+id/txtTax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTotalFare"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:text=" + Total Tax : Rs. 100"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_14sp" />


            <TextView
                android:id="@+id/txtGstFare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:text=" + GST (5.0 %) : Rs. 65"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginTop="@dimen/mini"
                android:text="@string/ridefaretitle"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_18sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginTop="@dimen/semiSmall"
                android:text="Ahemdabad To Vadodara"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/mini"
                android:padding="@dimen/medium">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/mini"
                    android:elevation="@dimen/small"
                    android:padding="@dimen/small"
                    app:cardCornerRadius="@dimen/small">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/small">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimary"
                                >

                                <EditText
                                    android:id="@+id/edtPassName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/passname"
                                    android:inputType="textEmailAddress" />

                            </android.support.design.widget.TextInputLayout>


                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/colorPrimary"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/edtMobile"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableRight="@drawable/ic_perm_contact_calendar_black_24dp"
                                    android:hint="@string/passmobile"
                                    android:inputType="number" />

                            </android.support.design.widget.TextInputLayout>


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/colorPrimary"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/edtPickDate"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/pickdate"
                                    android:inputType="textEmailAddress" />

                            </android.support.design.widget.TextInputLayout>


                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/colorPrimary"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/edtPickTime"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/picktime"
                                    android:inputType="number" />

                            </android.support.design.widget.TextInputLayout>


                        </LinearLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary">

                            <EditText
                                android:id="@+id/edtPickup"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/ic_my_location_black_24dp"
                                android:hint="@string/pickup"
                                android:inputType="textEmailAddress" />

                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:backgroundTint="@color/colorPrimary"
                            android:layout_height="wrap_content">

                            <EditText

                                android:id="@+id/edtDrop"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/ic_my_location_black_24dp"
                                android:hint="@string/dropat"
                                android:inputType="textEmailAddress" />

                        </android.support.design.widget.TextInputLayout>


                        <EditText
                            android:id="@+id/edtGst"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/mini"
                            android:hint="@string/gst"
                            android:inputType="textEmailAddress"
                            android:textStyle="bold" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/mini"
                            android:orientation="horizontal">


                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:backgroundTint="@color/colorPrimary"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/mini"
                                android:layout_weight="0.5">

                                <EditText

                                    android:id="@+id/edtDiscountCoupon"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/discount"
                                    android:inputType="textEmailAddress" />

                            </android.support.design.widget.TextInputLayout>


                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/mini"
                                android:layout_weight="0.9"
                                android:background="@color/colorPrimary"
                                android:text="@string/apply"
                                android:textColor="@color/white"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/medium"
                            android:text="@string/note"
                            android:textSize="@dimen/textsize_16sp"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/medium"
                            android:text="@string/notedetails"
                            android:textSize="@dimen/textsize_12sp" />


                        <Button
                            android:id="@+id/bookNow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/medium"
                            android:background="@drawable/square_border_dark"
                            android:text="@string/choosepayment"
                            android:textColor="@color/white"
                            android:textStyle="bold" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>