<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher_round"
            android:layout_width="150dp"
            android:layout_height="150dp" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/semiLarge">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:layout_weight="1">


            <EditText
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium"
                android:hint="@string/passname"
                android:layout_margin="@dimen/medium" />


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:layout_weight="1">


                <EditText
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/medium"
                    android:hint="@string/passmobile"
                    android:inputType="number"
                    android:layout_margin="@dimen/medium" />


            </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_weight="1">


                    <EditText
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/medium"
                        android:hint="@string/useremail"
                        android:layout_margin="@dimen/medium" />


                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/extraLarge"
            android:text="@string/save"
            android:padding="@dimen/medium"
            android:textSize="@dimen/textsize_22sp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"

            />



    </LinearLayout>


</RelativeLayout>