<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashimage"
    android:orientation="vertical"
    tools:context=".ui.OtpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <!--<ImageView-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_margin="20dp"-->
        <!--android:src="@drawable/carfront" />-->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/otp_details"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:orientation="horizontal"
                android:padding="20dp">


                <EditText
                    android:layout_weight="1"
                    android:id="@+id/edtTxtPin1"
                    android:layout_width="40dp"
                    android:layout_height="42dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/round_shape"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/edtTxtPin2"
                    android:layout_width="40dp"
                    android:layout_height="42dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/round_shape"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/edtTxtPin3"
                    android:layout_width="40dp"
                    android:layout_height="42dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/round_shape"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/edtTxtPin4"
                    android:layout_width="40dp"
                    android:layout_height="42dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/round_shape"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/edtTxtPin5"
                    android:layout_width="40dp"
                    android:layout_height="42dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/round_shape"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/white" />


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/resendcode"
                android:textAlignment="center"
                android:textColor="#FF78160B"
                android:textSize="20sp" />





        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btn_Continue"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:text="@string/continu"
        android:textColor="@color/white"
        android:background="#FF78160B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>